--- a/bootcamp/css/learningcss.html
+++ b/bootcamp/css/learningcss.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Learning CSS</title>
     <link href="style.css" rel="stylesheet">  <!-- self closing tag-->
 </head>
 <body>
+    <nav>
+        <ul>
+        <li>Home</li>
+        <li>Services</li>
+        <li>products</li>
+        <li>Complaints</li>
+        <li>Contact</li>
+        </ul>
+    </nav>
     <h1 class="center">Intro</h1>
     <p>sample photo inserted here</p>
    <!-- img is a self closing tag-->
@@ -39,7 +48,7 @@
 </ol>
 <div>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, possimus laborum ab commodi quis, nesciunt voluptates ipsa officia amet doloremque facere a ut ducimus adipisci, nemo esse optio tempora! Nihil.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, possimus laborum ab commodi quis, nesciunt voluptates ipsa offia amet doloremque facere a ut ducimus adipisci, nemo esse optio tempora! Nihil.
     </p>
 </div>
 <div>
